feat: implement multiple tab

--- a/index.html
+++ b/index.html
@@ -34,33 +34,35 @@
             <p>Tab 3 content</p>
         </div>
 
+        <hr />
+
         <!-- Tab 2 -->
-        <!-- <ul id="tabs2">
+        <ul id="tabs2">
             <li>
-                <a href="#tab21">Tab 1</a>
+                <a href="#tab21">Tab 21</a>
             </li>
             <li>
-                <a href="#tab22">Tab 2</a>
+                <a href="#tab22">Tab 22</a>
             </li>
             <li>
-                <a href="#tab23">Tab 3</a>
+                <a href="#tab23">Tab 33</a>
             </li>
         </ul>
 
         <div id="tab21">
-            <h2>Tab 1</h2>
-            <p>Tab 1 content</p>
+            <h2>Tab 21</h2>
+            <p>Tab 21 content</p>
         </div>
 
         <div id="tab22">
-            <h2>Tab 2</h2>
-            <p>Tab 2 content</p>
+            <h2>Tab 22</h2>
+            <p>Tab 22 content</p>
         </div>
 
         <div id="tab23">
-            <h2>Tab 3</h2>
-            <p>Tab 3 content</p>
-        </div> -->
+            <h2>Tab 23</h2>
+            <p>Tab 23 content</p>
+        </div>
         <script src="./src/tabzy.js"></script>
     </body>
 </html>
