feat: rename tabs and update query parameter handling

--- a/index.html
+++ b/index.html
@@ -39,29 +39,29 @@
         <!-- Tab 2 -->
         <ul id="tabs2">
             <li>
-                <a href="#tab21">Tab 21</a>
+                <a href="#tabA">Tab A</a>
             </li>
             <li>
-                <a href="#tab22">Tab 22</a>
+                <a href="#tabB">Tab B</a>
             </li>
             <li>
-                <a href="#tab23">Tab 33</a>
+                <a href="#tabC">Tab C</a>
             </li>
         </ul>
 
-        <div id="tab21">
-            <h2>Tab 21</h2>
-            <p>Tab 21 content</p>
+        <div id="tabA">
+            <h2>Tab A</h2>
+            <p>Tab A content</p>
         </div>
 
-        <div id="tab22">
-            <h2>Tab 22</h2>
-            <p>Tab 22 content</p>
+        <div id="tabB">
+            <h2>Tab B</h2>
+            <p>Tab B content</p>
         </div>
 
-        <div id="tab23">
-            <h2>Tab 23</h2>
-            <p>Tab 23 content</p>
+        <div id="tabC">
+            <h2>Tab C</h2>
+            <p>Tab C content</p>
         </div>
         <script src="./src/tabzy.js"></script>
     </body>
